all issues resolved

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -9,7 +9,7 @@ title: Competition Coffee | About
 	</div>
 	<div class="cca-about-content-box competition-coffee-wrapper">
 		<div class="cca-hero-circle">
-			<h1>competition coffee and refreshment services</h1>
+			<h1>competition coffee <br>and refreshment<br> services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
 			<a href="./contact.html">Get Started</a>
@@ -53,6 +53,7 @@ title: Competition Coffee | About
 		<div class="cca-about-content-copy">
 			<h1>filtered water systems</h1>
 			<p>Water filtration systems on rental with free water filtration.</p>
+			<a href="./equipment.html">View Filtration Systems</a>
 		</div>
 	</div>
 	<div class="cca-about-content-box cca-about-content-box-flex competition-coffee-wrapper getting-started">
