--- a/src/pages/coffee.html
+++ b/src/pages/coffee.html
@@ -9,7 +9,7 @@ title: Competition Coffee | Coffee
 	</div>
 	<div class="cce-content-box competition-coffee-wrapper">
 		<div class="cce-hero-circle">
-			<h1>competition coffee and refreshment services</h1>
+			<h1>competition coffee <br>and refreshment<br> services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
 			<a href="./contact.html">Get Started</a>
@@ -150,7 +150,7 @@ title: Competition Coffee | Coffee
 			</a>
 		</div>
 		<div class="cce-cta-image coffee-start-now">
-			<img src="{{root}}static/images/coffee-packets.png" alt="">
+			<img src="{{root}}static/images/coffee-packets1.png" alt="">
 		</div>
 	</div>
 </section>
