--- a/src/pages/equipment.html
+++ b/src/pages/equipment.html
@@ -9,7 +9,7 @@ title: Competition Coffee | Equipment
 	</div>
 	<div class="cce-content-box competition-coffee-wrapper">
 		<div class="cce-hero-circle">
-			<h1>competition coffee and refreshment services</h1>
+			<h1>competition coffee <br>and refreshment<br> services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
 			<a href="./contact.html">Get Started</a>
@@ -22,7 +22,7 @@ title: Competition Coffee | Equipment
 				<p><strong>Capacity : 150+ drinks per day<br/>CoEx<sup>®</sup>-brewer with 1 or 2 whole bean grinders<br/>Up to total 5 canisters including options of chocolate and milktopping<br/>Energy efficient (ECPL: 101,6)<br/>85% or more recyclability (depending on model)</strong></p>
 			</div>
 			<div class="cce-content-image">
-				<img src="{{root}}static/images/machines/de-jong-duke-nio.png" alt="De Jong Duke Nio">
+				<img src="{{root}}static/images/machines/de-jong-duke-nio.jpg" alt="De Jong Duke Nio">
 			</div>
 		</div>
 	</div>
@@ -128,7 +128,7 @@ title: Competition Coffee | Equipment
 			</div>
 			<div class="cce-equipment-column">
 				<div class="cce-equipment-image-container">
-					<img src="{{root}}static/images/machines/de-jong-duke-nio.png" alt="De Jong Duke Nio Bean to Cup Brewer">
+					<img src="{{root}}static/images/machines/de-jong-duke-nio.jpg" alt="De Jong Duke Nio Bean to Cup Brewer">
 				</div>
 				<p>DE JONG DUKE NIO BEAN TO<br/>CUP BREWER</p>
 			</div>
@@ -279,6 +279,15 @@ title: Competition Coffee | Equipment
 				</div>
 				<p>DESIGNER WATER FAUCETS<br/>& CHILLER SYSTEMS</p>
 			</div>
+			
+		</div>
+		<div class="cce-equipment-row">
+<div class="cce-equipment-column">
+	<div class="cce-equipment-image-container">
+		<img src="{{root}}static/images/machines/Naturizzata-Water-System1.jpg" alt="Naturizzata Water System">
+	</div>
+	<p>Naturizzata Water System</p>
+</div>
 		</div>
 	</div>
 	<div class="cce-cta">
