--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,22 +4,7 @@ title: Competition Coffee | Home
 ---
 
 <section class="competition-coffee-homepage">
-	<div class="main-carousel ccho-carousel">
-		<div class="carousel-cell">
-			<div class="ccho-carousel-content">
-				<h3 class="ccho-carousel-large-copy">
-					Imagine this… perfectly prepared coffee & tea using world-class equipment of your choosing, expertly installed and maintained by our passionate technicians.
-
-				</h3>
-				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
-				<a href="./contact.html">
-					Contact Us
-				</a>
-			</div>
-			<div class="ccho-carousel-image">
-				<img src="{{root}}static/images/carousel-image.png" alt="">
-			</div>
-		</div>
+	<div class="main-carousel ccho-carousel">		
 		<div class="carousel-cell">
 			<div class="ccho-carousel-content">
 				<h3 class="ccho-carousel-large-copy">
@@ -44,7 +29,7 @@ title: Competition Coffee | Home
 				</a>
 			</div>
 			<div class="ccho-carousel-image">
-				<img src="{{root}}static/images/carousel-image2.png" alt="">
+				<img src="{{root}}static/images/carousel-image2.jpg" alt="">
 			</div>
 		</div>
 		<div class="carousel-cell">
@@ -58,6 +43,22 @@ title: Competition Coffee | Home
 			</div>
 			<div class="ccho-carousel-image">
 				<img src="{{root}}static/images/carousel-image3.png" alt="">
+			</div>
+		</div>
+		<div class="carousel-cell">
+			<div class="ccho-carousel-content">
+				<h3 class="ccho-carousel-large-copy">
+					Imagine this… perfectly prepared coffee & tea using world-class equipment of your choosing, expertly installed and maintained
+					by our passionate technicians.
+		
+				</h3>
+				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
+				<a href="./contact.html">
+					Contact Us
+				</a>
+			</div>
+			<div class="ccho-carousel-image">
+				<img src="{{root}}static/images/carousel-image.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -163,7 +164,8 @@ title: Competition Coffee | Home
 		<div class="ccho-content-container">
 			<div class="ccho-content-copy-container">
 				<div class="ccho-content-image--medium">
-					<img src="{{root}}static/images/snacks.png" alt="">
+					<img src="{{root}}static/images/snacks.png" alt="" class="desk-img">
+					<img src="{{root}}static/images/snacks.jpg" alt="" class="mob-img">
 				</div>
 				<div class="ccho-content-copy">
 					<h1>snacks</h1>
